tests/cases/compiler/contextualTyping2/index.ts
var foo: {id:number;} = {id:4, name:"foo"};
//~^ ERROR: Object literal may only specify known properties, and 'name' does not exist.